--- a/ex1_5.org
+++ b/ex1_5.org
@@ -10,7 +10,7 @@ Exercise 1.5.  Ben Bitdiddle has invented a test to determine whether the interp
       y))
 #+END_SRC
 
-Then he evaluates the expression
+Then he evaluates the expression:
 
 #+BEGIN_SRC scheme
 (test 0 (p))
@@ -22,13 +22,13 @@ What behavior will Ben observe with an interpreter that uses applicative-order  
 * Analysis
 The fundamental difference between applicative and normal order evaluation seems to be the extent to which sustitution [expansion] of formal parameters are performed before evaluation takes place. With normal order evaluation, the substitutions are performed before any evaluation takes place (full substitution before evaluation). With applicative order evaluation on the orher hand, evaluated paraeters are evaluated, that is the values of compound sub expressions as opposed to the sub expressions themselves.
 
-#+NAME: applicatve order
+Applicative order evaluation:
 #+BEGIN_EXAMPLE
   (test x y) ; x = 0 and y = the procedure (p), defined above
   (test 0 (p)) ; eavaluation of parameters, where x  -> evaluates to 0 and (p) -> is defined in terms of itself and the evaluation goes on forever
 #+END_EXAMPLE
 
-#+NAME: normal order
+Normal order evaluation:
 #+BEGIN_EXAMPLE
   (test x y)
 
@@ -50,9 +50,9 @@ The fundamental difference between applicative and normal order evaluation seems
 
 * Conclusions
 
-Under applicative order evaluation, the result will be an endless recursion, signalling an error.
+1. Under applicative order evaluation, the result will be an endless recursion, signalling an error.
 
-Under normal order ealuation, the result will be zero as per the consequent.
+2. Under normal order ealuation, the result will be zero as per the consequent.
 
 
 
